# modern-cpp-modules

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  build-quick.sh  build.sh  entrypoint.sh  vendors.sh
.github/workflows/: default.yml  docker.yml
app/: CMakeLists.txt  config.h.in  main.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/src/: calculator.cpp
libs/dummy/: CMakeLists.txt  dummy.cpp  dummy.private.h
libs/dummy/src/: dummy.cpp
libs/libpuzzles_dummy/: CMakeLists.txt  dummy.cpp  dummy.private.h
libs/libpuzzles_dummy/include/: dummy.h
libs/libpuzzles_dummy/tests/: main.cpp
scripts/: build.sh  vendors.sh
tests/: CMakeLists.txt
tests/core_tests/: CMakeLists.txt
tests/core_tests/src/: calculator_test.cpp
tests/dummy_tests/: CMakeLists.txt
tests/dummy_tests/src/: dummy_test.cpp
tests/learncpp_tests/: CMakeLists.txt  learncpp_iostreams_test.cpp
tests/learncpp_tests/src/: iostreams_test.cpp  variables_test.cpp
tests/libpuzzles_dummy_tests/: CMakeLists.txt  main.cpp
